Fixed loader-wrapper z-index, after page loaded.

--- a/main.scss
+++ b/main.scss
@@ -46,6 +46,8 @@ body {
   &.hidden {
     opacity: 0;
 
+    z-index: 0;
+
     transition: $base-transition;
   }
 
